--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.mobapphome.library:mah-encryptor-lib:1.0.1'
+    implementation 'com.mobapphome.library:simple-encryptor-lib:1.1.3'
 }
