--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        applicationId "de.baumann.browser"
+        applicationId "io.ascrod.monochrome"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 81
